// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ballot > redirects if ballot does not exist 1`] = `<div />`;

exports[`Ballot > renders correctly with an audited ballot 1`] = `
<div>
  <div>
    <div
      class="sc-kGXeez fSmIyR"
    >
      <div
        class="sc-ckVGcZ bxAWbg"
      >
        <div
          class="sc-jKJlTe ebZSAv"
        >
          <div
            class="sc-eNQAEJ eawDHL"
          >
            <div
              class="sc-kkGfuU cJRsCh"
            >
              <button
                class="bp3-button bp3-minimal sc-kEYyzF cIpjCt"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-dxgOiQ iNhIYv"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jTzLTM jwrcvs"
            >
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Tabulator
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  11
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Batch
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  0003-04-Precinct 13 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Number
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  313
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jzJRlG cpuuIz"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-bwzfXH dSMaUq"
            >
              <div
                class="ballot-main"
              >
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Contests
                </h5>
                <form>
                  <div
                    class="sc-htpNat kWdSWK"
                  >
                    <div
                      class="sc-gzVnrw eUAHzK"
                    >
                      <div
                        class="sc-htoDjs ClGoI"
                      >
                        <h3
                          class="bp3-heading sc-kAzzGY kxTNdi"
                        >
                          Contest Name
                        </h3>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            checked=""
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice One
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice Two
                            </span>
                          </span>
                        </label>
                      </div>
                      <div
                        class="sc-dnqmqq fUHzAV"
                      >
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Blank Vote
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Not on Ballot
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Invalid Write-In
                            </span>
                          </span>
                        </label>
                        <textarea
                          class="bp3-input sc-cSHVUG iENywS"
                          name="comment-Contest Name"
                          placeholder="Add Note"
                        >
                          Good ballot
                        </textarea>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-ifAKCX jzSIMx"
                  >
                    <button
                      class="bp3-button bp3-large bp3-intent-success sc-chPdSV hbSLVF sc-gqjmRU eotNvg"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Submit Selections
                      </span>
                    </button>
                    <button
                      class="bp3-button"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Back
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            class="sc-hMqMXs zBIpE"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-iAyFgw jCvUMF"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot. Select
                 
                <strong>
                  Invalid Write-In
                </strong>
                 for a write-in adjudicated as invalid.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot > renders correctly with an unaudited ballot 1`] = `
<div>
  <div>
    <div
      class="sc-kGXeez fSmIyR"
    >
      <div
        class="sc-ckVGcZ bxAWbg"
      >
        <div
          class="sc-jKJlTe ebZSAv"
        >
          <div
            class="sc-eNQAEJ eawDHL"
          >
            <div
              class="sc-kkGfuU cJRsCh"
            >
              <button
                class="bp3-button bp3-minimal sc-kEYyzF cIpjCt"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-dxgOiQ iNhIYv"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jTzLTM jwrcvs"
            >
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Tabulator
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  11
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Batch
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  0003-04-Precinct 19 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Number
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  2112
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jzJRlG cpuuIz"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-bwzfXH dSMaUq"
            >
              <div
                class="ballot-main"
              >
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Contests
                </h5>
                <form>
                  <div
                    class="sc-htpNat kWdSWK"
                  >
                    <div
                      class="sc-gzVnrw eUAHzK"
                    >
                      <div
                        class="sc-htoDjs ClGoI"
                      >
                        <h3
                          class="bp3-heading sc-kAzzGY kxTNdi"
                        >
                          Contest Name
                        </h3>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice One
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice Two
                            </span>
                          </span>
                        </label>
                      </div>
                      <div
                        class="sc-dnqmqq fUHzAV"
                      >
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Blank Vote
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Not on Ballot
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Invalid Write-In
                            </span>
                          </span>
                        </label>
                        <textarea
                          class="bp3-input sc-cSHVUG iENywS"
                          name="comment-Contest Name"
                          placeholder="Add Note"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-ifAKCX jzSIMx"
                  >
                    <button
                      class="bp3-button bp3-disabled bp3-large bp3-intent-success sc-chPdSV hbSLVF sc-gqjmRU eotNvg"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Submit Selections
                      </span>
                    </button>
                    <button
                      class="bp3-button"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Back
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            class="sc-hMqMXs zBIpE"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-iAyFgw jCvUMF"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot. Select
                 
                <strong>
                  Invalid Write-In
                </strong>
                 for a write-in adjudicated as invalid.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot > selects Blank Vote 1`] = `
<div>
  <div>
    <div
      class="sc-kGXeez fSmIyR"
    >
      <div
        class="sc-ckVGcZ bxAWbg"
      >
        <div
          class="sc-jKJlTe ebZSAv"
        >
          <div
            class="sc-eNQAEJ eawDHL"
          >
            <div
              class="sc-kkGfuU cJRsCh"
            >
              <button
                class="bp3-button bp3-minimal sc-kEYyzF cIpjCt"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-dxgOiQ iNhIYv"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jTzLTM jwrcvs"
            >
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Tabulator
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  11
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Batch
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  0003-04-Precinct 19 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Number
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  2112
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jzJRlG cpuuIz"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-bwzfXH dSMaUq"
            >
              <div
                class="ballot-main"
              >
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Contests
                </h5>
                <form>
                  <div
                    class="sc-htpNat kWdSWK"
                  >
                    <div
                      class="sc-gzVnrw eUAHzK"
                    >
                      <div
                        class="sc-htoDjs ClGoI"
                      >
                        <h3
                          class="bp3-heading sc-kAzzGY kxTNdi"
                        >
                          Contest Name
                        </h3>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice One
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice Two
                            </span>
                          </span>
                        </label>
                      </div>
                      <div
                        class="sc-dnqmqq fUHzAV"
                      >
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Blank Vote
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Not on Ballot
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Invalid Write-In
                            </span>
                          </span>
                        </label>
                        <textarea
                          class="bp3-input sc-cSHVUG iENywS"
                          name="comment-Contest Name"
                          placeholder="Add Note"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-ifAKCX jzSIMx"
                  >
                    <button
                      class="bp3-button bp3-large bp3-intent-success sc-chPdSV hbSLVF sc-gqjmRU eotNvg"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Submit Selections
                      </span>
                    </button>
                    <button
                      class="bp3-button"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Back
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            class="sc-hMqMXs zBIpE"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-iAyFgw jCvUMF"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot. Select
                 
                <strong>
                  Invalid Write-In
                </strong>
                 for a write-in adjudicated as invalid.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot > selects Not on Ballot 1`] = `
<div>
  <div>
    <div
      class="sc-kGXeez fSmIyR"
    >
      <div
        class="sc-ckVGcZ bxAWbg"
      >
        <div
          class="sc-jKJlTe ebZSAv"
        >
          <div
            class="sc-eNQAEJ eawDHL"
          >
            <div
              class="sc-kkGfuU cJRsCh"
            >
              <button
                class="bp3-button bp3-minimal sc-kEYyzF cIpjCt"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-dxgOiQ iNhIYv"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jTzLTM jwrcvs"
            >
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Tabulator
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  11
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Batch
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  0003-04-Precinct 19 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Number
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  2112
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jzJRlG cpuuIz"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-bwzfXH dSMaUq"
            >
              <div
                class="ballot-main"
              >
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Contests
                </h5>
                <form>
                  <div
                    class="sc-htpNat kWdSWK"
                  >
                    <div
                      class="sc-gzVnrw eUAHzK"
                    >
                      <div
                        class="sc-htoDjs ClGoI"
                      >
                        <h3
                          class="bp3-heading sc-kAzzGY kxTNdi"
                        >
                          Contest Name
                        </h3>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice One
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice Two
                            </span>
                          </span>
                        </label>
                      </div>
                      <div
                        class="sc-dnqmqq fUHzAV"
                      >
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Blank Vote
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Not on Ballot
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Invalid Write-In
                            </span>
                          </span>
                        </label>
                        <textarea
                          class="bp3-input sc-cSHVUG iENywS"
                          name="comment-Contest Name"
                          placeholder="Add Note"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-ifAKCX jzSIMx"
                  >
                    <button
                      class="bp3-button bp3-large bp3-intent-success sc-chPdSV hbSLVF sc-gqjmRU eotNvg"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Submit Selections
                      </span>
                    </button>
                    <button
                      class="bp3-button"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Back
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            class="sc-hMqMXs zBIpE"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-iAyFgw jCvUMF"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot. Select
                 
                <strong>
                  Invalid Write-In
                </strong>
                 for a write-in adjudicated as invalid.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot > switches audit and review views 1`] = `
<div>
  <div>
    <div
      class="sc-kGXeez fSmIyR"
    >
      <div
        class="sc-ckVGcZ bxAWbg"
      >
        <div
          class="sc-jKJlTe ebZSAv"
        >
          <div
            class="sc-eNQAEJ eawDHL"
          >
            <div
              class="sc-kkGfuU cJRsCh"
            >
              <button
                class="bp3-button bp3-minimal sc-kEYyzF cIpjCt"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-dxgOiQ iNhIYv"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jTzLTM jwrcvs"
            >
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Tabulator
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  11
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Batch
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  0003-04-Precinct 19 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Number
                </h5>
                <h4
                  class="bp3-heading sc-fjdhpX MzakE"
                >
                  2112
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jzJRlG cpuuIz"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-bwzfXH dSMaUq"
            >
              <div
                class="ballot-main"
              >
                <h5
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  Ballot Contests
                </h5>
                <form>
                  <div
                    class="sc-htpNat kWdSWK"
                  >
                    <div
                      class="sc-gzVnrw eUAHzK"
                    >
                      <div
                        class="sc-htoDjs ClGoI"
                      >
                        <h3
                          class="bp3-heading sc-kAzzGY kxTNdi"
                        >
                          Contest Name
                        </h3>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice One
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice Two
                            </span>
                          </span>
                        </label>
                      </div>
                      <div
                        class="sc-dnqmqq fUHzAV"
                      >
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Blank Vote
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Not on Ballot
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-VigVT dTZkaX"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Invalid Write-In
                            </span>
                          </span>
                        </label>
                        <textarea
                          class="bp3-input sc-cSHVUG iENywS"
                          name="comment-Contest Name"
                          placeholder="Add Note"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-ifAKCX jzSIMx"
                  >
                    <button
                      class="bp3-button bp3-large bp3-intent-success sc-chPdSV hbSLVF sc-gqjmRU eotNvg"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Submit Selections
                      </span>
                    </button>
                    <button
                      class="bp3-button"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Back
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            class="sc-hMqMXs zBIpE"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-iAyFgw jCvUMF"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot. Select
                 
                <strong>
                  Invalid Write-In
                </strong>
                 for a write-in adjudicated as invalid.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
